Modifica della gestione delle combinazioni del rotore